--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,38 @@
-FROM python:3.10
-  
-  # Python'un outputları tam göstərməsi üçün
-ENV PYTHONUNBUFFERED 1
-ENV APP_ROOT /code
-ENV DEBUG False
-  
-  # PostgreSQL üçün psycopg2 quraşdırılmasını təmin et
-RUN apt-get update && apt-get install -y libpq-dev gcc
-  
-  # Tələb olunan Python kitabxanalarını quraşdır
-ADD requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
-  
-  # Proyekt kodlarını konteynerə əlavə et
-WORKDIR ${APP_ROOT}
-ADD . ${APP_ROOT}
-  
-  # Django static fayllarını topla
-RUN if [ -f manage.py ]; then python manage.py collectstatic --noinput; fi
-  
-  # Portu açıq saxla
-EXPOSE 8000
-  
-  # Django serverini başlat
-CMD ["gunicorn", "--chdir", "/code", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
+version: '3'
+
+services:
+  postgres:
+    container_name: postgres-db
+    image: postgres:14  # PostgreSQL 14 versiyasına keçirik
+    ports:
+      - 5432:5432
+    volumes:
+      - ./pgdb:/var/lib/postgresql/data
+    env_file: .env
+    environment:
+      - LC_ALL=C.UTF-8
+
+  django_app:
+    container_name: django
+    build: .
+    restart: "always"
+    env_file: .env
+    environment:
+      - VIRTUAL_HOST=157.180.28.125,edu-po.com
+      - VIRTUAL_PORT=8000
+      - TIMEOUT=300
+      - HTTP_PORT=8000
+      - STATS_PORT=8001
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+
+networks:
+  default:
+    external:
+      name: nginx-proxy
+  web:
+    external: true
