--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,15 @@ version: '3'
 services:
   postgres:
     container_name: postgres-db
-    image: postgres:14  # PostgreSQL 14 versiyasına keçirik
+    image: postgres:15.7
     ports:
-      - 5432:5432
+      - 5432:5432 # Bind host port 5432 to PostgreSQL port 5432
     volumes:
       - ./pgdb:/var/lib/postgresql/data
     env_file: .env
     environment:
       - LC_ALL=C.UTF-8
+
 
   django_app:
     container_name: django
@@ -18,18 +19,20 @@ services:
     restart: "always"
     env_file: .env
     environment:
-      - VIRTUAL_HOST=157.180.28.125,edu-po.com
+      - VIRTUAL_HOST=37.27.81.112,test-lms.upholding.az,lms.upholding.az,78.46.129.225
       - VIRTUAL_PORT=8000
       - TIMEOUT=300
       - HTTP_PORT=8000
       - STATS_PORT=8001
+
     volumes:
       - .:/code
     ports:
       - "8000:8000"
-    depends_on:
+    links:
       - postgres
-
+    depends_on:
+      - "postgres"
 networks:
   default:
     external:
