update: docker-compose virtual host change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: "always"
     env_file: .env
     environment:
-      - VIRTUAL_HOST=37.27.81.112,test-lms.upholding.az,lms.upholding.az,78.46.129.225
+      - VIRTUAL_HOST=157.180.28.125,edu-po.com
       - VIRTUAL_PORT=8000
       - TIMEOUT=300
       - HTTP_PORT=8000
